--- a/client/src/app/modules/client/mis-solicitudes/codeudor/codeudor.component.html
+++ b/client/src/app/modules/client/mis-solicitudes/codeudor/codeudor.component.html
@@ -2,46 +2,71 @@
 <div style="margin-left: 23%;" id="login-page" class="row container">
     <div class="col s10 z-depth-6 card-panel">
         <div class="row">
-            <form [formGroup]="frmValidator" (ngSubmit) = "SaveCodeudor()" class="col s12">
+            <form [formGroup]="frmValidator" (ngSubmit)="SaveCodeudor()" class="col s12">
                 <br>
                 <div class="row">
                     <div class="input-field col s6">
                         <input id="nombre" formControlName="Nombre" type="text" class="validate">
                         <label for="nombre">Nombre</label>
+                        <div class="warning-validation"
+                            *ngIf="fv.Nombre.errors && (fv.Nombre.dirty || fv.Nombre.touched)">
+                            <strong *ngIf="fv.Nombre.errors.required">Es Requerido</strong>
+                        </div>
                     </div>
                     <div class="input-field col s6">
                         <input id="apellido" formControlName="Apellido" type="text" class="validate">
                         <label for="apellido">Apellido</label>
+                        <div class="warning-validation"
+                            *ngIf="fv.Apellido.errors && (fv.Apellido.dirty || fv.Apellido.touched)">
+                            <strong *ngIf="fv.Apellido.errors.required">Es Requerido</strong>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
                         <input id="cedula" formControlName="Cedula" type="text" class="validate">
                         <label for="cedula">Cedula</label>
+                        <div class="warning-validation"
+                            *ngIf="fv.Cedula.errors && (fv.Cedula.dirty || fv.Cedula.touched)">
+                            <strong *ngIf="fv.Cedula.errors.required">Es Requerido</strong>
+                        </div>
                     </div>
                     <div class="input-field col s6">
                         <input id="telefono" formControlName="Telefono" type="text" class="validate">
                         <label for="telefono">Telefono</label>
+                        <div class="warning-validation"
+                            *ngIf="fv.Telefono.errors && (fv.Telefono.dirty || fv.Telefono.touched)">
+                            <strong *ngIf="fv.Telefono.errors.required">Es Requerido</strong>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div style="margin-left: 16%;" class="input-field col s7">
                         <input id="email" formControlName="Correo" type="email" class="validate">
                         <label for="email">Correo</label>
+                        <div class="warning-validation"
+                            *ngIf="fv.Correo.errors && (fv.Correo.dirty || fv.Correo.touched)">
+                            <strong *ngIf="fv.Correo.errors.required">Es Requerido</strong>
+                        </div>
                     </div>
                 </div>
 
 
-                <button class="input-group-text upload blue btn" (click)="upload()"
-                    id="btnUpload">Upload</button>&nbsp;&nbsp;
+                <div style="margin-left: 23%;" class="row">
+                    <input (change)=" fileChange($event)" formControlName="Documento" type="file"
+                        class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                    <div class="warning-validation"
+                        *ngIf="fv.Documento.errors && (fv.Documento.dirty || fv.Documento.touched)">
+                        <strong *ngIf="fv.Documento.errors.required">Es Requerido</strong>
+                    </div>
+                </div>
 
-                <input style="margin-left: 16%;" (change)=" fileChange($event)" type="file" class="custom-file-input"
-                    id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
 
-                <br /> 
-                <br />    
-                <button  class="btn waves-effect waves-light"
-                    style="margin-left: 38%;" type="submit" name="action">Submit
+                <br />
+                <br />
+                <button
+                    [disabled]="fv.Nombre.errors || fv.Apellido.errors || fv.Cedula.errors || fv.Telefono.errors || fv.Correo.errors || fv.Documento.errors   "
+                    class="btn waves-effect waves-light" style="margin-left: 38%;" type="submit" name="action">Enviar
                     <i class="material-icons right">send</i>
                 </button>
             </form>
