--- a/client/src/app/public/home/home.component.html
+++ b/client/src/app/public/home/home.component.html
@@ -28,18 +28,21 @@
 <div class="row">
   <div style="float: left; margin-right: 3%;margin-left: 70px;" class="card col s3 "
     *ngFor="let c of inmuebles | paginate: { itemsPerPage: 8, currentPage: p }">
-    <div class="card-image">
-      <img src="http://localhost:3000/api/containers/imagen/download/{{c.Imagen}}" width="100" height="300">
-      <span class="card-title">{{c.TipoOferta}} - {{c.TipoInmueble}}</span>
-      <a routerLink="/inmueble/view/{{c.id}}"  class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
-    </div>
-    <div class="card-content">
-      <span>{{c.departmentName}} - {{c.cityName}} </span><br>
-      <span>Barrio:{{c.Barrio}} - Direccion:{{c.Direccion}}</span><br>
-      <span>Precio : {{c.Precio}} - Estrato : {{c.Estrato}}</span><br>
-      <span>Area: {{c.Area}} - Numero de Habitaciones : {{c.NumeroHabitaciones}}</span><br>
-      <span>Numero Baños: {{c.NumeroBanos}} - Estado: {{c.EstadoInmueble}}</span><br>
-      <p> {{c.Descripcion}}</p>
+    <div>
+      <div class="card-image">
+        <img src="http://localhost:3000/api/containers/imagen/download/{{c.Imagen}}" width="100" height="300">
+        <span class="card-title">{{c.TipoOferta}} - {{c.TipoInmueble}}</span>
+        <a routerLink="/inmueble/view/{{c.id}}" class="btn-floating halfway-fab waves-effect waves-light red"><i
+            class="material-icons">add</i></a>
+      </div>
+      <div class="card-content">
+        <span>{{c.departmentName}} - {{c.cityName}} </span><br>
+        <span>Barrio:{{c.Barrio}} - Direccion:{{c.Direccion}}</span><br>
+        <span>Precio : {{c.Precio}} - Estrato : {{c.Estrato}}</span><br>
+        <span>Area: {{c.Area}} - Numero de Habitaciones : {{c.NumeroHabitaciones}}</span><br>
+        <span>Numero Baños: {{c.NumeroBanos}} - Estado: {{c.EstadoInmueble}}</span><br>
+        <p> {{c.Descripcion}}</p>
+      </div>
     </div>
   </div> &nbsp;
 </div>
