--- a/client/src/app/public/contact/contact.component.html
+++ b/client/src/app/public/contact/contact.component.html
@@ -7,12 +7,12 @@
             <img class="activator" src="assets/images/D.jpg">
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Description<i
+            <span class="card-title activator grey-text text-darken-4">Descripcion<i
                 class="material-icons right">more_vert</i></span>
           </div>
-          <div class="card-reveal brown">
-            <span class="card-title grey-text text-darken-4">Description<i class="material-icons right">close</i></span>
-            <p>HogarColombia is a company dedicated to the sale and leasing of real estate.</p>
+          <div class="card-reveal">
+            <span class="card-title grey-text text-darken-4">Descripcion<i class="material-icons right">close</i></span>
+            <p>Somos una compañia que permite una facilidad a la hora de adquirir o alquilar propiedad</p>
           </div>
         </div>
       </div>
@@ -23,13 +23,12 @@
             <img class="activator" src="assets/images/M.jpg">
           </div>
           <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Mission<i
+            <span class="card-title activator grey-text text-darken-4">Mision<i
                 class="material-icons right">more_vert</i></span>
           </div>
           <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Mission<i class="material-icons right">close</i></span>
-            <p>Our mission is to provide a customer-based real estate rental and sale service. Since it is essential for
-              us that the client is satisfied with his choice, we do not focus clearly on him and his comfort.</p>
+            <span class="card-title grey-text text-darken-4">Mision<i class="material-icons right">close</i></span>
+            <p>En nuestra empresa el objetivo es brindar a la comunidad una herramienta facil de usar y efectiva a la hora de buscar un hogar</p>
           </div>
         </div>
       </div>
@@ -45,50 +44,11 @@
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">Vision<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>Nuestra meta a largo plazo es poder abarcar propiedades fuera de colombia y ser una herramienta lider en nuestro continente</p>
           </div>
         </div>
       </div>
     </div>
-  
-    <div class="divider"></div>
-    <br>
-  
-    <div class="row">
-  
-      <h5 class="center">Available Houses</h5>
-  
-      <div class="slider col s12 ">
-        <ul class="slides ">
-          <li>
-            <img src="assets/images/1.jpg"> <!-- random image -->
-            <div class="caption center-align">
-              <h3>This is our big Tagline!</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="assets/images/2.jpg"> <!-- random image -->
-            <div class="caption left-align">
-              <h3>Left Aligned Caption</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="assets/images/3.jpg"> <!-- random image -->
-            <div class="caption right-align">
-              <h3>Right Aligned Caption</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-          <li>
-            <img src="assets/images/4.jpg"> <!-- random image -->
-            <div class="caption center-align">
-              <h3>This is our big Tagline!</h3>
-              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
+    <img style="width: 80%;height:20%;margin: 5%;"src="assets/images/Imagen1.jpg">
+</div>  
+   
